fixing dynamic / layout bugs
main section of country cards search and filter complete.

--- a/countries-api/src/Styles/header.scss
+++ b/countries-api/src/Styles/header.scss
@@ -5,6 +5,7 @@
   background-color: var(--background);
   height: 8em;
   width: 100%;
+  margin-bottom: 6em;
   box-shadow: 0px 0px 1.2px -7px rgba(0, 0, 0, 0.087),
     0px 0px 2.8px -7px rgba(0, 0, 0, 0.125),
     0px 0px 5.3px -7px rgba(0, 0, 0, 0.155),
@@ -20,6 +21,9 @@
     @include for-desktop-up {
       margin-left: 4em;
     }
+    @include for-mid-desktop-up {
+      margin-left: 4em;
+    }
     @include for-big-desktop-up {
       margin-right: 6em;
     }
@@ -31,10 +35,9 @@
     display: flex;
     justify-content: space-around;
     padding: 0 2px 0 0;
-    // font-size: 12px;
     border: none;
     @include for-tablet-portrait-up {
-      margin-right: 3em;
+      margin-right: 42px;
     }
     @include for-desktop-up {
       margin-right: 6em;
