--- a/countries-api/src/Styles/main.scss
+++ b/countries-api/src/Styles/main.scss
@@ -4,10 +4,20 @@
   font-weight: 600;
 }
 
-.columns {
-  display: flex;
+.main_container {
+  margin: 2em;
+}
+
+.search_columns {
+  justify-content: space-between;
+  margin: 0 1em;
+
+  @include for-desktop-up {
+    // margin: 0 4em;
+  }
 
   .search_bar {
+    max-width: 400px;
     box-shadow: 0px 0px 1.2px -7px rgba(0, 0, 0, 0.087),
       0px 0px 2.8px -7px rgba(0, 0, 0, 0.125),
       0px 0px 5.3px -7px rgba(0, 0, 0, 0.155),
@@ -19,29 +29,38 @@
       background-color: var(--background);
       color: var(--text-primary);
       width: 100%;
-      height: 3em;
+      height: 50px;
       border: none;
     }
   }
+}
 
-  .drop_down {
-    height: 1em;
-    box-shadow: 0px 0px 1.2px -7px rgba(0, 0, 0, 0.087),
-      0px 0px 2.8px -7px rgba(0, 0, 0, 0.125),
-      0px 0px 5.3px -7px rgba(0, 0, 0, 0.155),
-      0px 0px 9.4px -7px rgba(0, 0, 0, 0.185),
-      0px 0px 17.5px -7px rgba(0, 0, 0, 0.223),
-      0px 0px 42px -7px rgba(0, 0, 0, 0.31);
+.dropdown_div {
+  display: flex;
+  justify-content: end;
 
-    @include for-tablet-portrait-up {
-      margin-top: 23px;
-      justify-content: end;
-    }
+  @include for-phone-only {
+    justify-content: left;
+  }
+
+  @include for-tablet-portrait-up {
+    justify-content: left;
+  }
+
+  @include for-tablet-mid {
+    justify-content: end;
   }
 }
 
 #drop_down_btn {
   width: 15em;
+  max-width: 200px;
+  box-shadow: 0px 0px 1.2px -7px rgba(0, 0, 0, 0.087),
+    0px 0px 2.8px -7px rgba(0, 0, 0, 0.125),
+    0px 0px 5.3px -7px rgba(0, 0, 0, 0.155),
+    0px 0px 9.4px -7px rgba(0, 0, 0, 0.185),
+    0px 0px 17.5px -7px rgba(0, 0, 0, 0.223),
+    0px 0px 42px -7px rgba(0, 0, 0, 0.31);
   background-color: var(--background);
   color: var(--text-primary);
   font-size: 15px;
@@ -65,11 +84,21 @@
 }
 
 .country_cards_container {
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+
+  @include for-tablet-landscape-small {
+    justify-content: space-around;
+  }
+
   .country_cards {
     background-color: var(--background);
     color: var(--text-primary);
     height: 24em;
     width: 20em;
+    margin: 2em;
     box-shadow: 0px 0px 1.2px -7px rgba(0, 0, 0, 0.087),
       0px 0px 2.8px -7px rgba(0, 0, 0, 0.125),
       0px 0px 5.3px -7px rgba(0, 0, 0, 0.155),
