--- a/countries-api/src/Styles/variables.scss
+++ b/countries-api/src/Styles/variables.scss
@@ -1,20 +1,17 @@
-// *---FONTS----*
 $font-stack: "Nunito Sans", sans-serif;
 
 // *---COLORS DARK_MODE----*
-// Dark Mode Elements
+// Elements
 $DM-DarkBlue: hsl(209, 23%, 22%);
-// Dark Mode Background
+// Background
 $DM-VeryDarkBlue: hsl(207, 26%, 17%);
 // Dark Mode Text & Light Mode Elements
 $White: hsl(0, 0%, 100%);
 
 // *---COLORS LIGHT_MODE----*
-// Light Mode Text
+//  Text
 $LM-VeryDarkBlue: hsl(200, 15%, 8%);
-// Light Mode Input
-$LM-DarkGray: hsl(0, 0%, 52%);
-// Light Mode Background
+//  Background
 $LM-LightGray: hsl(0, 0%, 98%);
 
 @mixin for-phone-only {
@@ -27,6 +24,19 @@ $LM-LightGray: hsl(0, 0%, 98%);
     @content;
   }
 }
+
+@mixin for-tablet-mid {
+  @media (min-width: 768px) {
+    @content;
+  }
+}
+
+@mixin for-tablet-landscape-small {
+  @media (min-width: 800px) {
+    @content;
+  }
+}
+
 @mixin for-tablet-landscape-up {
   @media (min-width: 900px) {
     @content;
@@ -37,6 +47,13 @@ $LM-LightGray: hsl(0, 0%, 98%);
     @content;
   }
 }
+
+@mixin for-mid-desktop-up {
+  @media (min-width: 1568px) {
+    @content;
+  }
+}
+
 @mixin for-big-desktop-up {
   @media (min-width: 1800px) {
     @content;
